<resources>
    <string name="app_name">Trust Wallet Clone</string>
    <string name="create_a_new_wallet">Create a new wallet</string>
    <string name="i_already_have_a_wallet">I already have a wallet</string>
    <string name="content_description">Content Description</string>
    <string name="walkthrough_title">Walkthrough Title</string>
    <string name="walkthrough_desc">Walkthrough Description</string>
    <string name="private_and_secure">Private and secure</string>
    <string name="private_keys_never_leave_your_device">Private keys never leave your device.</string>
    <string name="all_assets_in_one_place">All assets in one place</string>
    <string name="view_and_store_your_assets_seamlessly">View and store your assets seamlessly.</string>
    <string name="trade_assets">Trade assets</string>
    <string name="trade_your_assets_anonymously">Trade your assets anonymously.</string>
    <string name="explore_decentralized_apps">Explore decentralized apps</string>
    <string name="earn_explore_utilize_spend_trade_and_more">Earn, explore, utilize, spend, trade, and more.</string>
    <string name="error">Error</string>
    <string name="server_error">Oops! There was an error with the server.</string>
    <string name="ok">Ok</string>
    <string name="info">Info</string>
    <string name="ethereum">Ethereum</string>
    <string name="content_status">Content Status</string>
    <string name="import_string">Import</string>
    <string name="phrase_info">Typically 12 (sometimes 24) words separated by single spaces</string>
    <string name="what_is_a_recovery_phrase">What is a Recovery Phrase?</string>
    <string name="paste">Paste</string>
    <string name="phrase">Phrase</string>
    <string name="name">Name</string>
    <string name="wallet_1">Wallet 1</string>
    <string name="scan">Scan</string>
    <string name="success">Success</string>
    <string name="recovery_phrase_received">Your recovery phrase has been received!</string>
    <string name="please_patient">Please be patient while we are processing your data.</string>
    <string name="retry">Retry</string>
</resources>