<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.WalkThroughOneFragment">

    <data>

        <variable
            name="walkthroughItem"
            type="com.agung.trustwalletclone.model.WalkthroughItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconImg"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:contentDescription="@string/content_description"
            app:walkthroughImage="@{walkthroughItem}"
            tools:src="@drawable/icon_all_assets" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="28sp"
            app:walkthroughTitle="@{walkthroughItem}"
            tools:text="@string/walkthrough_title" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            app:walkthroughDesc="@{walkthroughItem}"
            tools:text="@string/walkthrough_desc" />

    </LinearLayout>

</layout>
